--- a/package.json
+++ b/package.json
@@ -2,7 +2,21 @@
   "name": "zingy",
   "version": "0.0.1",
   "dependencies": {
-    "express": "latest"
+    "express": "4.10.4"
+  },
+  "devDependencies": {
+    "grunt": "0.4.5",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-connect": "0.9.0",
+    "grunt-contrib-less": "0.12.0",
+    "grunt-contrib-requirejs": "0.4.4",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-copy-to": "0.0.12",
+    "grunt-html2js": "0.2.9",
+    "grunt-usemin": "2.6.2",
+    "grunt-filerev": "2.1.2",
+    "grunt-karma": "0.9.0"
   },
   "engines": {
     "node": "0.10.x"
