--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "latest",
-    "lodash": "latest",
+    "ramda": "latest",
     "requirejs": "latest",
     "bootstrap": "latest",
     "almond": "latest"
