--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "zingy",
   "version": "0.0.1",
+  "private": true,
   "dependencies": {
-    "express": "4.10.4"
+    "express": "4.10.5"
   },
   "devDependencies": {
     "grunt": "0.4.5",
@@ -12,9 +13,9 @@
     "grunt-contrib-less": "0.12.0",
     "grunt-contrib-requirejs": "0.4.4",
     "grunt-contrib-watch": "0.6.1",
-    "grunt-copy-to": "0.0.12",
+    "grunt-contrib-copy": "0.7.0",
     "grunt-html2js": "0.2.9",
-    "grunt-usemin": "2.6.2",
+    "grunt-usemin": "3.0.0",
     "grunt-filerev": "2.1.2",
     "grunt-karma": "0.9.0"
   },
