--- a/.jshintrc
+++ b/.jshintrc
@@ -12,6 +12,7 @@
   "undef": true,
   "unused": true,
   "globals": {
+    "define": true,
     "jasmine": true,
     "beforeEach": true,
     "afterEach": true,
