--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-route": "latest",
     "angular-touch": "latest",
     "angular-animate": "latest",
+    "angular-bootstrap": "latest",
     "ramda": "latest",
     "requirejs": "latest",
     "bootstrap": "latest",
