Added Login functionality

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "ramda": "latest",
     "requirejs": "latest",
     "bootstrap": "latest",
-    "almond": "latest"
+    "almond": "latest",
+    "satellizer": "latest"
   }
 }
