--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,16 @@
     "angular-route": "latest",
     "angular-touch": "latest",
     "angular-animate": "latest",
+    "angular-messages": "latest",
+    "angular-resource": "latest",
     "angular-bootstrap": "latest",
     "ramda": "latest",
     "requirejs": "latest",
     "bootstrap": "latest",
     "almond": "latest",
     "satellizer": "latest"
+  },
+  "resolutions": {
+    "angular": "1.3.8"
   }
 }
