updated events and offers functionality with google maps and image upload directive

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "requirejs": "latest",
     "bootstrap": "latest",
     "almond": "latest",
-    "satellizer": "latest"
+    "satellizer": "latest",
+    "ngImgCrop": "latest"
   },
   "resolutions": {
     "angular": "1.3.8"
