--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "4.10.6"
+    "express": "4.10.7"
   },
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-jshint": "0.10.0",
-    "grunt-contrib-less": "0.12.0",
+    "grunt-contrib-less": "1.0.0",
     "grunt-contrib-requirejs": "0.4.4",
     "grunt-contrib-watch": "0.6.1",
     "grunt-contrib-copy": "0.7.0",
+    "grunt-contrib-compress": "0.13.0",
     "grunt-html2js": "0.2.9",
     "grunt-usemin": "3.0.0",
     "grunt-filerev": "2.1.2",
-    "grunt-karma": "0.9.0"
+    "grunt-karma": "0.10.1",
+    "source-map": "0.1.43"
+
   },
   "engines": {
     "node": "0.10.x"
