--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "4.10.7"
+    "express": "4.10.7",
+    "compression": "1.3.0"
   },
   "devDependencies": {
     "grunt": "0.4.5",
